SBT-90: refactored examples

--- a/examples/AdminDefinedObject.ipynb
+++ b/examples/AdminDefinedObject.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1c30d0744f0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x24e55dd4580>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "from signals_notebook.entities import AdminDefinedObject\n",
     "\n",
-    "notebook = EntityStore.get('journal:151542f5-dcc2-4dc7-bfc3-c5f0d204ea4c')\n",
+    "notebook = EntityStore.get('journal:c54da414-87d0-448f-8987-b3f58d819f1e')\n",
     "new_ado = AdminDefinedObject.create(\n",
-    "    name='AdminDefinedObject experiment created by SDK',\n",
+    "    name='AdminDefinedObject experiment created by SDK example',\n",
     "    ado_type_name='New System Object (SK)',\n",
     "    description='Delete if you see this in UI',\n",
     "    notebook=notebook,\n",
@@ -173,23 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "EntityStore.delete(new_ado.eid)"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
