--- a/examples/Excel.ipynb
+++ b/examples/Excel.ipynb
@@ -29,7 +29,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x166ec9784f0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x20ddc9b4940>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -53,7 +53,7 @@
    "source": [
     "from signals_notebook.entities import EntityStore\n",
     "\n",
-    "experiment = EntityStore.get(\"experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f\")"
+    "experiment = EntityStore.get(\"experiment:a16616ef-e1d5-4409-a9b6-c253c359d504\")"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "source": [
     "from signals_notebook.entities.excel import Excel\n",
     "\n",
-    "excel = Excel.create(container=experiment, name='Andrey', content='New!!!!')"
+    "excel = Excel.create(container=experiment, name='Excel New', content='New!!!!')"
    ],
    "metadata": {
     "collapsed": false,
@@ -78,7 +78,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "File(name='Andrey.xlsx', content=b'New!!!!', content_type='application/vnd.openxmlformats-officedocument.spreadsheetml.sheet')"
+      "text/plain": "File(name='Excel+New.xlsx', content=b'New!!!!', content_type='application/vnd.openxmlformats-officedocument.spreadsheetml.sheet')"
      },
      "execution_count": 5,
      "metadata": {},
