--- a/examples/Image.ipynb
+++ b/examples/Image.ipynb
@@ -3,15 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cannot find .env file\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv\n",
@@ -29,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -39,9 +31,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1e2ba0a7760>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x178a5f204f0>"
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,11 +45,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from signals_notebook.entities.entity_store import EntityStore\n",
-    "experiment = EntityStore.get('experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f')"
+    "experiment = EntityStore.get('experiment:a16616ef-e1d5-4409-a9b6-c253c359d504')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "from signals_notebook.entities.image import Image\n",
+    "image = Image.create(container=experiment, name='image', content=b'image content', force=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -69,27 +76,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "from signals_notebook.entities.image import Image\n",
-    "image = Image.create(container=experiment, name='image', content=b'image content', file_extension='png', force=True)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "File(name='updated_image.png', content=b'image content', content_type='image/png')"
+      "text/plain": "File(name='image.png', content=b'image content', content_type='image/png')"
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "image.name = 'updated_image'\n",
@@ -121,8 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "File(name='updated_image.png', content=b'image content', content_type='image/png')"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "image.get_content()"
    ],
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "image.delete()"
