--- a/examples/Spotfire.ipynb
+++ b/examples/Spotfire.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -29,11 +29,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<signals_notebook.api.SignalsNotebookApi at 0x7f898376a3a0>"
-      ]
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x215f58904f0>"
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -54,12 +52,12 @@
    "outputs": [],
    "source": [
     "from signals_notebook.entities.entity_store import EntityStore\n",
-    "experiment = EntityStore.get('experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f')\n"
+    "experiment = EntityStore.get('experiment:a16616ef-e1d5-4409-a9b6-c253c359d504x`')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -73,6 +71,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "File(name='spotfire.dxp', content=b'file content', content_type='application/vnd.spotfire.dxp')"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spotfire.get_content()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spotfire.name = 'updated_spotfiredxp'\n",
+    "spotfire.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "pycharm": {
@@ -82,9 +116,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "File(name='spotfire.dxp', content=b'file content', content_type='application/vnd.spotfire.dxp')"
-      ]
+      "text/plain": "File(name='updated_spotfiredxp.dxp', content=b'file content', content_type='application/vnd.spotfire.dxp')"
      },
      "execution_count": 7,
      "metadata": {},
@@ -103,40 +135,6 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": [
-    "spotfire.name = 'updated_spotfiredxp'\n",
-    "spotfire.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "File(name='updated_spotfiredxp.dxp', content=b'file content', content_type='application/vnd.spotfire.dxp')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spotfire.get_content()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [],
    "source": [
     "spotfire.delete()"
