--- a/examples/UploadedResource.ipynb
+++ b/examples/UploadedResource.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1ed65ef62e0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x26e792844f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -51,7 +51,7 @@
    "source": [
     "from signals_notebook.entities import EntityStore\n",
     "\n",
-    "experiment = EntityStore.get('experiment:1cf65229-dea3-4bdb-b6c5-daf8565e39a0')"
+    "experiment = EntityStore.get('experiment:a16616ef-e1d5-4409-a9b6-c253c359d504')"
    ],
    "metadata": {
     "collapsed": false,
@@ -67,7 +67,7 @@
    "source": [
     "from signals_notebook.entities import UploadedResource\n",
     "\n",
-    "uploaded_resource = UploadedResource.create(container=experiment, name='UploadedResource.zip', content='UploadedResource Content!!!!')"
+    "uploaded_resource = UploadedResource.create(container=experiment, name='UploadedResource.zip', content=b'UploadedResource Content!!!!')"
    ],
    "metadata": {
     "collapsed": false,
@@ -82,7 +82,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "File(name='UploadedResource.zip', content=b'UploadedResource Content!!!!', content_type='application/x-zip-compressed')"
+      "text/plain": "File(name='UploadedResource.bin', content=b'UploadedResource Content!!!!', content_type='application/octet-stream')"
      },
      "execution_count": 5,
      "metadata": {},
@@ -105,7 +105,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:e371dd59-b715-4f2c-bf34-13819c1d9d66', digest='38763801', name='UploadedResource.zip', description='', created_at=datetime.datetime(2022, 7, 12, 9, 14, 4, 560000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 12, 9, 14, 4, 560000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:5c9b913e-ae94-478e-a7a2-fb35debbfd80', digest='88180470', name='UploadedResource.bin', description='', created_at=datetime.datetime(2022, 8, 30, 9, 8, 55, 677000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 8, 30, 9, 8, 55, 677000, tzinfo=datetime.timezone.utc))"
      },
      "execution_count": 6,
      "metadata": {},
@@ -128,7 +128,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:48ec6e2a-3a7b-4fd8-a278-2ddf09b0b7e8', digest='51883370', name='download (1).zip', description='', created_at=datetime.datetime(2022, 7, 11, 11, 16, 44, 32000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 11, 11, 16, 44, 32000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:ad4d1665-5f77-458b-b659-93a2fe4f4a5c', digest='75223027', name='example resource.json', description='', created_at=datetime.datetime(2022, 8, 30, 9, 8, 13, 314000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 8, 30, 9, 8, 13, 314000, tzinfo=datetime.timezone.utc))"
      },
      "execution_count": 7,
      "metadata": {},
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "another_uploaded_resource = EntityStore.get('uploadedResource:48ec6e2a-3a7b-4fd8-a278-2ddf09b0b7e8')\n",
+    "another_uploaded_resource = EntityStore.get('uploadedResource:ad4d1665-5f77-458b-b659-93a2fe4f4a5c')\n",
     "another_uploaded_resource"
    ],
    "metadata": {
@@ -168,8 +168,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "download+%281%29.zip\n",
-      "application/x-zip-compressed\n"
+      "example+resource.json\n",
+      "application/json\n"
      ]
     }
    ],
@@ -187,29 +187,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:b2e61e0a-9027-4b49-93f8-4b39e698d7c3', digest='91820847', name='download (1).zip', description='', created_at=datetime.datetime(2022, 7, 11, 12, 45, 12, 760000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 11, 12, 45, 12, 760000, tzinfo=datetime.timezone.utc)),\n Image(type=<EntityType.IMAGE_RESOURCE: 'imageResource'>, eid='imageResource:05f3daae-b05a-4118-a96a-be6ee26a4a3f', digest='94396040', name='download (1).jpg', description='', created_at=datetime.datetime(2022, 7, 11, 12, 49, 16, 794000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 11, 12, 49, 18, 955000, tzinfo=datetime.timezone.utc)),\n Entity(type='materialsTable', eid='materialsTable:e2f6e4a2-8069-4356-a398-18cd05a46bb8', digest='16561316', name='Materials Table', description='', created_at=datetime.datetime(2022, 7, 12, 8, 15, 42, 611000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 12, 8, 16, 21, 866000, tzinfo=datetime.timezone.utc)),\n UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:e371dd59-b715-4f2c-bf34-13819c1d9d66', digest='89427805', name='UploadedResource.zip', description='', created_at=datetime.datetime(2022, 7, 12, 9, 14, 4, 560000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 12, 9, 14, 13, 810000, tzinfo=datetime.timezone.utc))]"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(experiment.get_children())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "outputs": [],
    "source": [
     "uploaded_resource.delete()"
@@ -223,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [],
    "metadata": {
