--- a/examples/Word.ipynb
+++ b/examples/Word.ipynb
@@ -29,7 +29,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x181bfab64f0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1aa634a04f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -53,7 +53,7 @@
    "source": [
     "from signals_notebook.entities import EntityStore\n",
     "\n",
-    "experiment = EntityStore.get(\"experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f\")"
+    "experiment = EntityStore.get(\"experiment:a16616ef-e1d5-4409-a9b6-c253c359d504\")"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "source": [
     "from signals_notebook.entities.word import Word\n",
     "\n",
-    "word = Word.create(container=experiment, name='Andrey', content='New!!!!')"
+    "word = Word.create(container=experiment, name='DOCX NEW', content=b'New!!!!')"
    ],
    "metadata": {
     "collapsed": false,
@@ -78,7 +78,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "File(name='Andrey.docx', content=b'New!!!!', content_type='application/vnd.openxmlformats-officedocument.wordprocessingml.document')"
+      "text/plain": "File(name='DOCX+NEW.docx', content=b'New!!!!', content_type='application/vnd.openxmlformats-officedocument.wordprocessingml.document')"
      },
      "execution_count": 5,
      "metadata": {},
