--- a/examples/Task.ipynb
+++ b/examples/Task.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x25e22369460>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1ae28bf03a0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -51,7 +51,7 @@
    "source": [
     "from signals_notebook.entities import EntityStore\n",
     "\n",
-    "task = EntityStore.get(\"task:58ebedd9-c158-4bf3-b737-b45aea636a61\")"
+    "task = EntityStore.get(\"task:637ddfa4-0406-4328-84c7-677a61296af2\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -66,7 +66,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Task(type=<EntityType.TASK: 'task'>, eid='task:58ebedd9-c158-4bf3-b737-b45aea636a61', digest='18359046', name='Task-4', description='', created_at=datetime.datetime(2021, 11, 11, 11, 31, 32, 289000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 23, 14, 39, 27, 804000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "Task(type=<EntityType.TASK: 'task'>, eid='task:637ddfa4-0406-4328-84c7-677a61296af2', digest='48186746', name='Task-106', description='', created_at=datetime.datetime(2022, 8, 30, 9, 1, 5, 402000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 8, 30, 9, 1, 5, 402000, tzinfo=datetime.timezone.utc))"
      },
      "execution_count": 4,
      "metadata": {},
@@ -107,18 +107,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id='1' name='Task ID' content=CellPropertyContent(value='task:58ebedd9-c158-4bf3-b737-b45aea636a61', name=None, eid=None, values=None)\n",
-      "id='2' name='Task Type' content=CellPropertyContent(value='Task', name=None, eid=None, values=None)\n",
-      "id='3' name='Reference ID' content=CellPropertyContent(value='experiment:8d7eab5c-75a5-4458-ae6a-285ab0116a44', name=None, eid=None, values=None)\n",
-      "id='4' name='Requestor Comment' content=CellPropertyContent(value='5545', name=None, eid=None, values=None)\n",
-      "id='5' name='Analyst Comment' content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
-      "id='6' name='Required By' content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
-      "id='7' name='Analyst' content=CellPropertyContent(value={'userId': '119', 'userName': 'evgeniy.pokidov@quantori.com', 'email': 'evgeniy.pokidov@quantori.com', 'firstName': 'Evgeniy', 'lastName': 'Pokidov', 'picture': {}}, name=None, eid=None, values=None)\n",
-      "id='8' name='Experiment Link' content=CellPropertyContent(value='experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f', name=None, eid=None, values=None)\n",
-      "id='9' name='Request Link' content=CellPropertyContent(value='request:f56f61c5-9e1a-4c33-aa89-e9416027a586', name=None, eid=None, values=None)\n",
-      "id='10' name='Status' content=CellPropertyContent(value='In Progress', name=None, eid=None, values=None)\n",
-      "id='11' name='Attached Docs' content=CellPropertyContent(value='0', name=None, eid='task:58ebedd9-c158-4bf3-b737-b45aea636a61', values=None)\n",
-      "id='13' name='Created Date' content=CellPropertyContent(value='2022-06-15T21:00:00.000Z', name=None, eid=None, values=None)\n"
+      "id='1' name='Task ID' content=TaskCellContent(value='task:637ddfa4-0406-4328-84c7-677a61296af2', name=None, eid=None, values=None)\n",
+      "id='2' name='Task Type' content=TaskCellContent(value='Investigation', name=None, eid=None, values=None)\n",
+      "id='3' name='Reference ID' content=TaskCellContent(value='', name=None, eid=None, values=[])\n",
+      "id='4' name='Requestor Comment' content=TaskCellContent(value='5545', name=None, eid=None, values=None)\n",
+      "id='5' name='Analyst Comment' content=TaskCellContent(value=None, name=None, eid=None, values=None)\n",
+      "id='6' name='Required By' content=TaskCellContent(value=None, name=None, eid=None, values=None)\n",
+      "id='7' name='Analyst' content=TaskCellContent(value=None, name=None, eid=None, values=None)\n",
+      "id='8' name='Experiment Link' content=TaskCellContent(value=None, name=None, eid=None, values=None)\n",
+      "id='9' name='Request Link' content=TaskCellContent(value='request:cd55d951-d21d-4001-b9f8-c076bc047466', name=None, eid=None, values=None)\n",
+      "id='10' name='Status' content=TaskCellContent(value='New', name=None, eid=None, values=None)\n",
+      "id='11' name='Attached Docs' content=TaskCellContent(value='0', name=None, eid='task:637ddfa4-0406-4328-84c7-677a61296af2', values=None)\n",
+      "id='12' name='Creator' content=TaskCellContent(value={'userId': '136', 'userName': 'daniil.cherednichenko@quantori.com', 'email': 'daniil.cherednichenko@quantori.com', 'firstName': 'Daniil', 'lastName': 'Cherednichenko', 'picture': {}}, name=None, eid=None, values=None)\n"
      ]
     }
    ],
@@ -140,102 +140,6 @@
    "source": [
     "task.save()"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "from signals_notebook.entities import Task\n",
-    "experiment = EntityStore.get(\"experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "ename": "SignalsNotebookError",
-     "evalue": "<SignalsNotebookError status=400 code=BadRequest> title=The request parameters are in bad format. detail=Unsupported entity type task.>",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mSignalsNotebookError\u001B[0m                      Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [9]\u001B[0m, in \u001B[0;36m<cell line: 9>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      4\u001B[0m new_task_property \u001B[38;5;241m=\u001B[39m TaskProperty(\n\u001B[0;32m      5\u001B[0m     \u001B[38;5;28mid\u001B[39m\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m4\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m      6\u001B[0m     content\u001B[38;5;241m=\u001B[39mCellPropertyContent(value\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcreate_NEW_Task eee\u001B[39m\u001B[38;5;124m'\u001B[39m),\n\u001B[0;32m      7\u001B[0m )\n\u001B[0;32m      8\u001B[0m template_task \u001B[38;5;241m=\u001B[39m EntityStore\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtask:58ebedd9-c158-4bf3-b737-b45aea636a61\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m----> 9\u001B[0m new_task \u001B[38;5;241m=\u001B[39m \u001B[43mTask\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcreate\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m     10\u001B[0m \u001B[43m    \u001B[49m\u001B[43mproperties\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m[\u001B[49m\u001B[43mnew_task_property\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     11\u001B[0m \u001B[43m    \u001B[49m\u001B[43mtemplate\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtemplate_task\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     12\u001B[0m \u001B[43m    \u001B[49m\u001B[43mancestors\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m[\u001B[49m\u001B[43mexperiment\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m     13\u001B[0m \u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mC:\\coding\\pesn-python-sdk\\src\\signals_notebook\\entities\\todo_list\\task.py:154\u001B[0m, in \u001B[0;36mTask.create\u001B[1;34m(cls, properties, template, ancestors, digest, force)\u001B[0m\n\u001B[0;32m    141\u001B[0m     relationships \u001B[38;5;241m=\u001B[39m _TaskRelationships(\n\u001B[0;32m    142\u001B[0m         ancestors\u001B[38;5;241m=\u001B[39mAncestors(data\u001B[38;5;241m=\u001B[39m[item\u001B[38;5;241m.\u001B[39mshort_description \u001B[38;5;28;01mfor\u001B[39;00m item \u001B[38;5;129;01min\u001B[39;00m ancestors]) \u001B[38;5;28;01mif\u001B[39;00m ancestors \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m,\n\u001B[0;32m    143\u001B[0m         template\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdata\u001B[39m\u001B[38;5;124m'\u001B[39m: template\u001B[38;5;241m.\u001B[39mshort_description} \u001B[38;5;28;01mif\u001B[39;00m template \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m,\n\u001B[0;32m    144\u001B[0m     )\n\u001B[0;32m    146\u001B[0m request \u001B[38;5;241m=\u001B[39m _TaskRequestPayload(\n\u001B[0;32m    147\u001B[0m     data\u001B[38;5;241m=\u001B[39m_TaskRequestBody(\n\u001B[0;32m    148\u001B[0m         \u001B[38;5;28mtype\u001B[39m\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39m_get_entity_type(),\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    151\u001B[0m     )\n\u001B[0;32m    152\u001B[0m )\n\u001B[1;32m--> 154\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43msuper\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_create\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    155\u001B[0m \u001B[43m    \u001B[49m\u001B[43mdigest\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdigest\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    156\u001B[0m \u001B[43m    \u001B[49m\u001B[43mforce\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mforce\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    157\u001B[0m \u001B[43m    \u001B[49m\u001B[43mrequest\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mrequest\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    158\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mC:\\coding\\pesn-python-sdk\\src\\signals_notebook\\entities\\entity.py:113\u001B[0m, in \u001B[0;36mEntity._create\u001B[1;34m(cls, digest, force, request)\u001B[0m\n\u001B[0;32m    110\u001B[0m api \u001B[38;5;241m=\u001B[39m SignalsNotebookApi\u001B[38;5;241m.\u001B[39mget_default_api()\n\u001B[0;32m    111\u001B[0m log\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mCreate Entity: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m...\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m)\n\u001B[1;32m--> 113\u001B[0m response \u001B[38;5;241m=\u001B[39m \u001B[43mapi\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcall\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    114\u001B[0m \u001B[43m    \u001B[49m\u001B[43mmethod\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mPOST\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m    115\u001B[0m \u001B[43m    \u001B[49m\u001B[43mpath\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mcls\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_get_endpoint\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    116\u001B[0m \u001B[43m    \u001B[49m\u001B[43mparams\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m{\u001B[49m\n\u001B[0;32m    117\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdigest\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mdigest\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    118\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mforce\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mjson\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdumps\u001B[49m\u001B[43m(\u001B[49m\u001B[43mforce\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    119\u001B[0m \u001B[43m    \u001B[49m\u001B[43m}\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    120\u001B[0m \u001B[43m    \u001B[49m\u001B[43mjson\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mrequest\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdict\u001B[49m\u001B[43m(\u001B[49m\u001B[43mexclude_none\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    121\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    122\u001B[0m log\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mEntity: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m was created.\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m)\n\u001B[0;32m    124\u001B[0m result \u001B[38;5;241m=\u001B[39m Response[\u001B[38;5;28mcls\u001B[39m](\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mresponse\u001B[38;5;241m.\u001B[39mjson())  \u001B[38;5;66;03m# type: ignore\u001B[39;00m\n",
-      "File \u001B[1;32mC:\\coding\\pesn-python-sdk\\src\\signals_notebook\\api.py:152\u001B[0m, in \u001B[0;36mSignalsNotebookApi.call\u001B[1;34m(self, method, path, params, data, json, headers)\u001B[0m\n\u001B[0;32m    146\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m response\u001B[38;5;241m.\u001B[39mok:\n\u001B[0;32m    147\u001B[0m     log\u001B[38;5;241m.\u001B[39merror(\n\u001B[0;32m    148\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mError has been occurred while getting response, status code: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m    149\u001B[0m         response\u001B[38;5;241m.\u001B[39mstatus_code,\n\u001B[0;32m    150\u001B[0m         extra\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mresponse\u001B[39m\u001B[38;5;124m'\u001B[39m: response},\n\u001B[0;32m    151\u001B[0m     )\n\u001B[1;32m--> 152\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m SignalsNotebookError(response)\n\u001B[0;32m    153\u001B[0m log\u001B[38;5;241m.\u001B[39minfo(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mSuccessful request - HTTP url: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m, status code: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m, response\u001B[38;5;241m.\u001B[39murl, response\u001B[38;5;241m.\u001B[39mstatus_code)\n\u001B[0;32m    155\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m response\n",
-      "\u001B[1;31mSignalsNotebookError\u001B[0m: <SignalsNotebookError status=400 code=BadRequest> title=The request parameters are in bad format. detail=Unsupported entity type task.>"
-     ]
-    }
-   ],
-   "source": [
-    "from signals_notebook.entities import TaskProperty\n",
-    "from signals_notebook.entities.samples.cell import CellPropertyContent\n",
-    "\n",
-    "new_task_property = TaskProperty(\n",
-    "    id='4',\n",
-    "    content=CellPropertyContent(value='create_NEW_Task eee'),\n",
-    ")\n",
-    "template_task = EntityStore.get('task:58ebedd9-c158-4bf3-b737-b45aea636a61')\n",
-    "new_task = Task.create(\n",
-    "    properties=[new_task_property],\n",
-    "    template=template_task,\n",
-    "    ancestors=[experiment],\n",
-    ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "new_task"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "new_task.delete()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
