--- a/examples/Text.ipynb
+++ b/examples/Text.ipynb
@@ -2,17 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv\n",
@@ -30,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -40,9 +31,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x122799d00>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x213818704f0>"
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from signals_notebook.entities import EntityStore\n",
     "\n",
-    "experiment = EntityStore.get(\"experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f\")"
+    "experiment = EntityStore.get(\"experiment:a16616ef-e1d5-4409-a9b6-c253c359d504\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -70,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "from signals_notebook.entities.text import Text\n",
     "\n",
-    "text = Text.create(container=experiment, name='Auto', content='Hello from SDK')"
+    "text = Text.create(container=experiment, name='Auto', content=b'Hello from SDK')"
    ],
    "metadata": {
     "collapsed": false,
@@ -86,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "File(name='Auto.txt', content=b'<pre style=\"white-space: pre-wrap;\">Hello from SDK</pre>', content_type='text/plain')"
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "text.name = 'Third'\n",
@@ -124,10 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "outputs": [],
    "source": [
-    "text.delete()\n"
+    "text.delete()"
    ],
    "metadata": {
     "collapsed": false,
